# solar

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GAS_COMPARISON.md  HandOff.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SOLC_DIVERGENCE.md  bench-compile-time.sh  benchmark_no_optimizer.md  benchmark_results.md  cfg.dot  cliff.toml  clippy.toml  compile-time-results.md  default_16694140552348160763_0_1881930.profraw  default_16694140552348160763_0_1881954.profraw  default_16694140552348160763_0_1881995.profraw  default_16694140552348160763_0_1882011.profraw  default_16694140552348160763_0_1882035.profraw  default_16694140552348160763_0_1882047.profraw  default_16694140552348160763_0_1882091.profraw  default_16694140552348160763_0_1882111.profraw  default_16694140552348160763_0_1882156.profraw  default_16694140552348160763_0_1882157.profraw  default_16694140552348160763_0_1882186.profraw  default_16694140552348160763_0_1882198.profraw  default_16694140552348160763_0_1882276.profraw  default_16694140552348160763_0_1882295.profraw  default_16694140552348160763_0_1882337.profraw  default_16694140552348160763_0_1882348.profraw  default_16694140552348160763_0_1882421.profraw  deny.toml  (+5 more)
benches/: Cargo.toml  README.md  criterion.out  tables.in  tables.py
benches/analyze/: main.py  pyproject.toml
benches/benches/: bench.rs  compile_time.rs  criterion.out  criterion.rs  gungraun.rs  iai.rs
benches/src/: lib.rs  main.rs
crates/ast/: CHANGELOG.md  Cargo.toml  README.md
crates/ast-pretty/: Cargo.toml  README.md
crates/ast-pretty/src/: lib.rs
crates/ast/src/: enums.rs  globals.rs  lib.rs  pretty.rs  span.rs  span_visitor.rs  symbol.rs  token.rs  visit.rs
crates/capi/: CHANGELOG.md  Cargo.toml  README.md  soljson.js
crates/capi/ctest/: solidity_capi_test.c
crates/capi/src/: alloc.rs  lib.rs
crates/capi/tests/: ctest.rs  soljson.js  soljson_js.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs  soljson.js  test-soljson.js
crates/cli/src/: args.rs  cli.rs  emit.rs  lib.rs  lsp.rs  mir_opt.rs  signal_handler.rs  sigsegv_handler.rs  standard_json.rs  utils.rs  version.rs  wasm.rs
crates/cli/tests/: wasm_js.rs
crates/codegen/: CHANGELOG.md  Cargo.toml  README.md
crates/codegen/examples/: compile.rs
crates/codegen/src/: immutable.rs  ir_parse.rs  lib.rs  memory.rs  pass.rs  pass_manager.rs  timing.rs
crates/codegen/tests/: README.md  foundry.rs  round_trip.rs
crates/config/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/config/src/: lib.rs  lsp.rs  macros.rs  opts.rs  utils.rs  version.rs
crates/data-structures/: CHANGELOG.md  Cargo.toml  README.md
crates/data-structures/src/: arena_ext.rs  bit_set.rs  bump_ext.rs  captures.rs  collect.rs  cycle.rs  drop_guard.rs  fmt.rs  fx.rs  hint.rs  index.rs  interned.rs  lib.rs  map.rs  never.rs  on_drop.rs  scope.rs  sync.rs  thin_slice.rs  trustme.rs
crates/interface/: CHANGELOG.md  Cargo.toml  README.md
crates/interface/src/: globals.rs  lib.rs  panic_hook.rs  pos.rs  session.rs  source_map.rs  span.rs  symbol.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lint/: Cargo.toml
crates/lint/src/: context.rs  early.rs  late.rs  lib.rs  project.rs  registry.rs  runner.rs
crates/lsp/: CHANGELOG.md  CONFIGURATION.md  Cargo.toml  README.md
crates/lsp/benches/: lsp.rs
crates/lsp/src/: capabilities.rs  commands.rs  config.rs  diagnostics.rs  document.rs  document_links.rs  error.rs  folding_range.rs  formatter.rs  global_state.rs  hover.rs  inlay_hints.rs  lib.rs  natspec_completion.rs  override_index.rs  progress.rs  project_fixture.rs  proto.rs  rename.rs  request_cancellation.rs  selection_range.rs  serde.rs  server.rs  session.rs  signature_help.rs  symbols.rs  test_support.rs  tests.rs  utils.rs
crates/macros/: CHANGELOG.md  Cargo.toml  README.md
crates/macros/src/: index.rs  lib.rs  visitor.rs
crates/parse/: CHANGELOG.md  Cargo.toml  README.md
crates/parse/doc-examples/: parser.rs
crates/parse/src/: lib.rs  natspec.rs  session.rs
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  lib.rs  parser.rs  session.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: lib.rs
crates/rsolc/: Cargo.toml
crates/sema/: CHANGELOG.md  Cargo.toml  README.md
crates/sema/doc-examples/: hir.rs
crates/sema/src/: ast_lowering.rs  ast_passes.rs  ast_validation.rs  builtins.rs  compiler.rs  emit.rs  eval.rs  hir.rs  hir_lowering.rs  lib.rs  natspec.rs  parse.rs  span_visitor.rs  staging.rs  stats.rs  ty.rs
crates/sema/tests/: hir_pretty_print.rs
crates/solar/: CHANGELOG.md  Cargo.toml  build.rs  dist.toml  foundry.rs  ice_sweep.rs  lint.rs  tests.rs
crates/solar/foundry_harness/: mod.rs
crates/solar/src/: cli.rs  lib.rs  lsp.rs  main.rs  sigsegv_handler.rs  utils.rs
crates/solar/tests/: lsp.rs
crates/span/: Cargo.toml
crates/span/src/: globals.rs  lib.rs  pos.rs  span.rs  symbol.rs
crates/sulk/: Cargo.toml  build.rs  tests.rs
crates/sulk/src/: cli.rs  main.rs  sigsegv_handler.rs  utils.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/: Cargo.toml
examples/src/: AnotherCounter.sol  Counter.sol  hir.rs  lib.rs  parser.rs
fuzz/: .gitignore  Cargo.toml  README.md  mk_corpus.sh  run_erwin.sh  run_tree_crasher.sh
fuzz/fandango/: AbiVectorFixture.sol  README.md  abi-values.fan  corpus.jsonl  encode_abi_vectors.py  evm_runtime.py  promote_runtime_failure.py  reduce_runtime_failure.py  run_abi_vectors.py  run_foundry_target.py  run_solidity_sources.py  run_source_runtime.py  solidity-runtime-source.fan  solsmith.py  write_foundry_target.py
fuzz/fandango/runtime-corpus/: branch.sol  bytes.sol  bytes_loop.sol  combined.sol  loop.sol  mapping.sol  (+2 more)
fuzz/fuzz_targets/: canonicalize.rs  lexer_from_source_file.rs  parser_from_source_code.rs  parsing_context_parse_and_resolve.rs  run_compiler_args.rs
tools/foundry-tester/: Cargo.toml  README.md
tools/solar-mir-opt/: Cargo.toml
tools/tester/: Cargo.toml  README.md
tools/xtask/: Cargo.toml
(+3749 files in other folders)
