[workspace]
members = ["benches/", "crates/*", "tools/*"]
# Exclude bench and test crates from default commands.
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.74"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/sulk"
keywords = ["ethereum", "solidity", "solc", "crypto", "compiler"]
categories = ["compilers", "cryptography", "cryptography::cryptocurrencies"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"

[workspace.lints.rust]
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unused-crate-dependencies = "warn"
unused-must-use = "deny"

[workspace.lints.rustdoc]
all = "warn"

[profile.release]
strip = "debuginfo"
lto = "thin"
panic = "abort"
codegen-units = 1
incremental = false

[workspace.dependencies]
# compiler crates
sulk-ast = { version = "0.0.0", path = "crates/ast" }
sulk-config = { version = "0.0.0", path = "crates/config" }
sulk-data-structures = { version = "0.0.0", path = "crates/data-structures" }
sulk-interface = { version = "0.0.0", path = "crates/interface" }
sulk-macros = { version = "0.0.0", path = "crates/macros" }
sulk-parse = { version = "0.0.0", path = "crates/parse" }
sulk-sema = { version = "0.0.0", path = "crates/sema" }

# internal crates
sulk-tester = { version = "0.0.0", path = "tools/tester" }

# Ethereum
alloy-primitives = "0.7"

num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"

# CLI
clap = "4.4"
clap_builder = "4.4"

# diagnostics
anstream = "0.6"
anstyle = "1.0"
annotate-snippets = "0.11.1"

# serde
serde = "1.0"
serde_json = "1.0"

# macros
match_cfg = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
strum = "0.26"
syn = "2.0"
thiserror = "1.0"

# parallel
parking_lot = "0.12"
rayon = "1.8"

# tracing
tracing-error = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1"

# testing
assert_cmd = "2.0"
criterion = "0.5"
diff = "0.1.13"
expect-test = "1.4"
rand = "0.8"
tempfile = "3.9"
tester = "0.9"
unified-diff = "0.2.1"

once_cell = "1.19"
regex = "1.10"
walkdir = "2.4"

# misc
ahash = "0.8"
bitflags = "2.4"
bumpalo = "3.14"
hex = { package = "const-hex", version = "1.10" }
index_vec = "0.1.3"
indexmap = "2.2"
itertools = "0.13"
libc = "0.2"
md-5 = "0.10"
memchr = "2.7"
rustc-hash = "1.1.0"
scoped-tls = "1.0.1"
semver = "1.0"
smallvec = "1"
tikv-jemallocator = "0.5.4"
unicode-width = "0.1.11"
vergen = "8.3"
yansi = "1.0"
