[workspace]
members = ["benches/", "crates/*", "examples/", "tools/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83" # MSRV
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/solar"
keywords = ["ethereum", "solidity", "solc", "crypto", "compiler"]
categories = ["compilers", "cryptography", "cryptography::cryptocurrencies"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"
unused-crate-dependencies = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
solar-tester.opt-level = 3
console.opt-level = 3
indicatif.opt-level = 3
regex-automata.opt-level = 3
regex-syntax.opt-level = 3
regex.opt-level = 3
ui_test.opt-level = 3
unicode-width.opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = "debuginfo" # "symbols" for less binary size but no backtraces
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

# The profile that `dist` will build with.
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# compiler crates
solar = { version = "0.1.0", path = "crates/solar", package = "solar-compiler" }
solar-ast = { version = "0.1.0", path = "crates/ast" }
solar-ast-pretty = { version = "0.1.0", path = "crates/ast-pretty" }
solar-cli = { version = "0.1.0", path = "crates/cli" }
solar-config = { version = "0.1.0", path = "crates/config" }
solar-data-structures = { version = "0.1.0", path = "crates/data-structures" }
solar-interface = { version = "0.1.0", path = "crates/interface" }
solar-macros = { version = "0.1.0", path = "crates/macros" }
solar-parse = { version = "0.1.0", path = "crates/parse" }
solar-sema = { version = "0.1.0", path = "crates/sema" }

# internal crates
solar-tester = { path = "tools/tester" }

# Ethereum
alloy-primitives = "0.8"
alloy-json-abi = "0.8"

num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"

# CLI
clap = "4.4"
clap_builder = "4.4"

# diagnostics
anstream = "0.6.18"
anstyle = "1.0"
annotate-snippets = "0.11.1"

# serde
serde = "1.0"
serde_json = "1.0"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

derive_builder = "0.20.2"
derive_more = { version = "1.0", features = ["full"] }
match_cfg = "0.1"
strum = "0.26"
thiserror = "1.0"

# parallel
parking_lot = "0.12"
rayon = "1.8"

# tracing
tracing-error = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1"

# testing
criterion = "0.5"
expect-test = "1.4"
rand = "0.8"
regex = "1.10"
tempfile = "3.9"
tester = "0.9"

# misc
arrayvec = "0.7"
bitflags = "2.4"
bumpalo = "3.14"
cfg-if = "1.0"
const_format = "0.2"
dashmap = "6.0"
either = "1"
hex = { package = "const-hex", version = "1.10" }
index_vec = "0.1.3"
indexmap = "2.2"
itertools = ">=0.10, <=0.13"
itoa = "1.0"
lasso = "0.7.3"
libc = "0.2"
md-5 = "0.10"
memchr = "2.7"
once_map = { version = "0.4.20", default-features = false, features = ["std"] }
paste = "1.0"
petgraph = "0.6"
rustc-hash = "2.0"
scc = "2"
scoped-tls = "1.0"
semver = "1.0"
smallvec = { version = "1", features = ["const_generics", "union"] }
thread_local = "1.1"
tikv-jemallocator = "0.6"
typed-arena = "2.0"
unicode-width = "0.2"
vergen = "8.3"

[patch.crates-io]
# https://github.com/oli-obk/ui_test/pull/286
# https://github.com/oli-obk/ui_test/pull/289
# https://github.com/oli-obk/ui_test/pull/291
ui_test = { git = "https://github.com/oli-obk/ui_test", rev = "a2a7d13b0394767f5770eb563fc7fc30a3b780e5" }
