[workspace]
members = ["benches/", "crates/*", "examples/", "tools/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.87" # MSRV
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/solar"
keywords = ["ethereum", "solidity", "solc", "crypto", "compiler"]
categories = ["compilers", "cryptography", "cryptography::cryptocurrencies"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"
unused-crate-dependencies = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
solar-tester.opt-level = 3
console.opt-level = 3
indicatif.opt-level = 3
regex-automata.opt-level = 3
regex-syntax.opt-level = 3
regex.opt-level = 3
ui_test.opt-level = 3
unicode-width.opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "debuginfo" # "symbols" for less binary size but no backtraces
panic = "abort"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = false

[profile.bench]
inherits = "profiling"

# The profile that `dist` will build with.
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

# `dist` with debug assertions.
[profile.dist-dbg]
inherits = "dist"
debug = "full"
strip = false
debug-assertions = true

[workspace.dependencies]
# compiler crates
solar = { version = "0.1.4", path = "crates/solar", package = "solar-compiler", default-features = false }
solar-ast = { version = "0.1.4", path = "crates/ast", default-features = false }
solar-cli = { version = "0.1.4", path = "crates/cli", default-features = false }
solar-config = { version = "0.1.4", path = "crates/config", default-features = false }
solar-data-structures = { version = "0.1.4", path = "crates/data-structures", default-features = false }
solar-interface = { version = "0.1.4", path = "crates/interface", default-features = false }
solar-macros = { version = "0.1.4", path = "crates/macros", default-features = false }
solar-parse = { version = "0.1.4", path = "crates/parse", default-features = false }
solar-sema = { version = "0.1.4", path = "crates/sema", default-features = false }

# internal crates
solar-tester = { path = "tools/tester" }

# Ethereum
alloy-primitives = "1"
alloy-json-abi = "1"

num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"

# CLI
clap = "4.4"
clap_builder = "4.4"

# diagnostics
anstream = "0.6.18"
anstyle = "1.0"
annotate-snippets = { version = "0.11.5", features = ["simd"] }

# serde
serde = "1.0"
serde_json = "1.0"

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

derive_builder = "0.20.2"
derive_more = { version = "2.0", features = ["full"] }
match_cfg = "0.1"
strum = "0.27"
thiserror = ">=1"

# parallel
parking_lot = "0.12"
rayon = "1.8"

# tracing
tracing-subscriber = "0.3"
tracing = "0.1"

# testing
criterion = { package = "codspeed-criterion-compat", version = "2.7", default-features = false, features = [
    "cargo_bench_support",
] }
rand = "0.9"
regex = "1.10"
snapbox = "0.6"
tempfile = "3.9"
tester = "0.9"

# misc
arrayvec = "0.7"
bitflags = "2.4"
bumpalo = "3.14"
cfg-if = "1.0"
const_format = "0.2"
dashmap = "6.0"
either = "1"
foldhash = "0.1.5"
hex = { package = "const-hex", version = "1.10" }
index_vec = "0.1.3"
indexmap = "2.2"
itertools = ">=0.10, <=0.14"
itoa = "1.0"
lasso = "0.7.3"
libc = "0.2"
md-5 = "0.10"
memchr = "2.7"
once_map = { version = "0.4.20", default-features = false, features = ["std"] }
paste = "1.0"
petgraph = "0.8"
rustc-hash = "2.0"
scc = "2"
scoped-tls = "1.0"
semver = "1.0"
smallvec = { version = "1", features = ["const_generics", "union"] }
thread_local = "1.1"
typed-arena = "2.0"
unicode-width = "0.2"
vergen = "8"

[patch.crates-io]
mimalloc = { git = "https://github.com/purpleprotocol/mimalloc_rust", rev = "eff21096d5ee5337ec89e2b7174f1bbb11026c70" }
