[package]
name = "sulk-bench"
description = "Simple benchmarks across different Solidity parser implementations"
homepage = "https://github.com/paradigmxyz/sulk/tree/main/benches"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sulk-parse.workspace = true

solang-parser = "=0.3.4"

slang_solidity = "=0.15.1"
semver.workspace = true

[dev-dependencies]
criterion = "0.5"
iai-callgrind = "0.11"
paste.workspace = true

[features]
ci = []

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[[bench]]
name = "iai"
path = "benches/iai.rs"
harness = false
