[package]
name = "solar-bench"
description = "Simple benchmarks across different Solidity parser implementations"
homepage = "https://github.com/paradigmxyz/solar/tree/main/benches"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
solar-parse.workspace = true

solang-parser = "=0.3.4"

slang_solidity = "=0.18.3"
semver.workspace = true

tree-sitter = "=0.25.3"
tree-sitter-solidity = "=1.2.11"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7" }
iai-callgrind = "0.14"
paste.workspace = true

[features]
ci = []

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false

[[bench]]
name = "iai"
path = "benches/iai.rs"
harness = false
