[package]
name = "solar-bench"
description = "Simple benchmarks across different Solidity parser implementations"
homepage = "https://github.com/paradigmxyz/solar/tree/main/benches"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
solar-parse.workspace = true
solar-sema.workspace = true

solang-parser = "=0.3.4"

slang_solidity = "=0.18.3"
semver.workspace = true

tree-sitter = "=0.25.8"
tree-sitter-solidity = "=1.2.12"

[dev-dependencies]
criterion.workspace = true
iai-callgrind = "0.16"
paste.workspace = true

[features]
ci = []

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false

[[bench]]
name = "iai"
path = "benches/iai.rs"
harness = false
