[package]
name = "solar-ast-pretty"
description = "AST pretty-printing"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/ast-pretty"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
solar-ast.workspace = true

[features]
nightly = ["solar-ast/nightly"]
