[package]
name = "sulk-ast"
description = "Solidity Abstract Syntax Tree"
homepage = "https://github.com/danipopes/sulk/blob/master/crates/ast"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sulk-data-structures.workspace = true
sulk-macros.workspace = true
sulk-interface.workspace = true

[features]
nightly = ["sulk-data-structures/nightly", "sulk-macros/nightly", "sulk-interface/nightly"]
