[package]
name = "sulk-ast"
description = "Solidity Abstract Syntax Tree"
homepage = "https://github.com/paradigmxyz/sulk/tree/main/crates/ast"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
sulk-data-structures.workspace = true
sulk-interface.workspace = true
sulk-macros.workspace = true

alloy-primitives.workspace = true
semver.workspace = true
num-bigint.workspace = true
num-rational.workspace = true

[features]
nightly = ["sulk-data-structures/nightly", "sulk-interface/nightly"]
