[package]
name = "solar-ast"
description = "Solidity and Yul AST type and visitor trait definitions"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/ast"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
solar-data-structures.workspace = true
solar-interface.workspace = true
solar-macros.workspace = true

alloy-primitives.workspace = true
bumpalo = { workspace = true, features = ["std", "boxed"] }
either.workspace = true
semver.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
strum.workspace = true
typed-arena.workspace = true

[features]
nightly = ["solar-data-structures/nightly", "solar-interface/nightly"]
