[package]
name = "solar-config"
description = "Solar compiler configuration"
homepage = "https://github.com/ithacaxyz/solar/tree/main/crates/config"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
strum = { workspace = true, features = ["derive"] }

# clap
clap_builder = { workspace = true, optional = true }

# serde
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
nightly = []

clap = ["dep:clap_builder"]
serde = ["dep:serde"]
