[package]
name = "solar-config"
description = "Solar compiler configuration"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/config"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl", "cargo"] }

[dependencies]
strum = { workspace = true, features = ["derive"] }
derive_builder.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
nightly = []
