[package]
name = "solar-config"
description = "Solar compiler configuration"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/config"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[build-dependencies]
vergen = { workspace = true, optional = true, features = [
    "build",
    "cargo",
    "emit_and_set",
] }

[dependencies]
colorchoice.workspace = true
strum = { workspace = true, features = ["derive"] }

clap = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
nightly = []

clap = ["version", "dep:clap"]
version = ["dep:vergen"]
serde = ["dep:serde"]

# solar-cli features, only used by build.rs to include in the version string.
asm = []
jemalloc = []
mimalloc = []
tracing = []
tracing-off = []
tracing-chrome = []
tracy = []
tracy-allocator = []
