[package]
name = "sulk-data-structures"
description = "Common data structures"
homepage = "https://github.com/paradigmxyz/sulk/blob/main/crates/data-structures"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
ahash.workspace = true
smallvec = { workspace = true, features = ["union"] }
rustc-hash.workspace = true
indexmap.workspace = true
index_vec.workspace = true

# parallel
# TODO: wait for possible perf improvements upstream before introducing rayon code
# rayon = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[features]
nightly = ["smallvec/specialization", "smallvec/may_dangle", "parking_lot?/nightly"]
parallel = ["dep:parking_lot"]
# parallel = ["dep:rayon", "dep:parking_lot"]
