[package]
name = "solar-data-structures"
description = "Common data structures"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/data-structures"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
bumpalo.workspace = true
index_vec.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
smallvec = { workspace = true, features = ["union"] }

[features]
nightly = [
    "smallvec/specialization",
    "smallvec/may_dangle",
    "parking_lot/nightly",
]
