[package]
name = "sulk-interface"
description = "Source positions, diagnostics, and related helper functions"
homepage = "https://github.com/paradigmxyz/sulk/tree/main/crates/interface"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
sulk-config.workspace = true
sulk-data-structures.workspace = true
sulk-macros.workspace = true

alloy-primitives.workspace = true
dashmap.workspace = true
itertools.workspace = true
itoa.workspace = true
lasso = { workspace = true, features = ["multi-threaded", "inline-more"] }
match_cfg.workspace = true
# md-5.workspace = true
normalize-path = "0.2.1"
scoped-tls.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-width.workspace = true

# diagnostics
anstream.workspace = true
anstyle.workspace = true
annotate-snippets.workspace = true

# json
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

[features]
json = ["dep:serde", "dep:serde_json"]

nightly = ["sulk-data-structures/nightly", "sulk-macros/nightly"]
