[package]
name = "solar-interface"
description = "Source positions, diagnostics, and related helper functions"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/interface"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
solar-config.workspace = true
solar-data-structures.workspace = true
solar-macros.workspace = true

derive_more.workspace = true
smallvec.workspace = true
thiserror.workspace = true

dunce = "1"
inturn.workspace = true
itertools.workspace = true
itoa.workspace = true
normalize-path = "0.2.1"
once_map.workspace = true
rayon.workspace = true
scoped-tls.workspace = true
tracing.workspace = true
unicode-width.workspace = true

# diagnostics
anstream.workspace = true
anstyle.workspace = true
annotate-snippets.workspace = true

# json
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

[features]
json = ["dep:serde", "dep:serde_json"]

nightly = ["solar-data-structures/nightly", "solar-macros/nightly"]
