[package]
name = "rsolc-lexer"
version = "0.0.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "Solidity lexer"
homepage = "https://github.com/danipopes/rsolc/blob/master/crates/lexer"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
