[package]
name = "rsolc-macros"
description = "Rsolc macros"
homepage = "https://github.com/danipopes/rsolc/blob/master/crates/ast"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }

[features]
nightly = []
